# presidio

./: .env  .gitignore  README.md  backend.Dockerfile  build_pydoc_subset.py  docker-compose.yml  frontend.Dockerfile  main.py  nginx.conf  pyproject.toml  requirements.txt  start.bat  start.sh  steward_feedback.json
assets/: entities_synonymes.json  generelized_jobs.csv  jobs.csv  json_serialization_test.json  k_means_data.json  masked_test.csv  masking_report.json  rgdp_glossary.json  test.csv  test2.csv
core/: __init__.py  backend.py  csv_pii.py  data_quality.py  data_steward.py  llm_helper.py  logic.py  recommendation.py  util.py
docs/: core.csv_pii.html  core.data_quality.html  core.data_steward.html  core.html  core.logic.html  index.html  tests.html  tests.test_entities.html
gdpr-dashboard/: .env  package-lock.json  package.json
gdpr-dashboard/src/: App.jsx
gdpr-dashboard/src/api/: api.js
gdpr-dashboard/src/components/: ActionItem.jsx  ActionLegend.jsx  ColumnCard.jsx  RecommendationCard.jsx  RecommendationsDisplay.jsx  ReportTable.jsx  UploadArea.jsx
gdpr-dashboard/src/pages/: DataQualityPage.jsx  DataStewardPage.jsx
logs/: feedback.json  recommendations.json
models/: Modelfile  k_means.py  kmeans_headers.pkl  pca_transform.pkl
tests/: dummy_gen.csv  dummy_gen.py  eval_kmeans.py  evaluate_recognizers.py  test_dataset.json  test_entities.py
