[project]
name = "presidio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.10.0",
    "blis>=0.7.11",
    "catalogue>=2.0.10",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "cloudpathlib>=0.22.0",
    "colorama>=0.4.6",
    "confection>=0.1.5",
    "conllu>=6.0.0",
    "contourpy>=1.3.3",
    "cryptography>=45.0.7",
    "cycler>=0.12.1",
    "cymem>=2.0.11",
    "fastapi>=0.116.1",
    "filelock>=3.19.1",
    "fonttools>=4.59.2",
    "fsspec>=2025.7.0",
    "h11>=0.16.0",
    "huggingface-hub>=0.34.4",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "kiwisolver>=1.4.9",
    "langcodes>=3.5.0",
    "language-data>=1.3.0",
    "marisa-trie>=1.3.1",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.6",
    "mdurl>=0.1.2",
    "mpmath>=1.3.0",
    "murmurhash>=1.0.13",
    "networkx>=3.5",
    "nmslib-metabrainz>=2.1.3",
    "numpy==1.26.4",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "phonenumbers>=9.0.13",
    "pillow>=11.3.0",
    "preshed>=3.0.10",
    "presidio-analyzer>=2.2.359",
    "presidio-anonymizer>=2.2.357",
    "psutil>=7.0.0",
    "pybind11>=3.0.1",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "pyperclip>=1.9.0",
    "pysbd>=0.3.4",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.14.0",
    "regex>=2025.9.1",
    "requests>=2.32.5",
    "requests-file>=2.1.0",
    "rich>=14.1.0",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "scispacy>=0.5.5",
    "sentence-transformers>=5.1.0",
    "setuptools>=80.9.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "smart-open>=7.3.0.post1",
    "sniffio>=1.3.1",
    "spacy==3.7.4",
    "spacy-legacy>=3.0.12",
    "spacy-loggers>=1.0.5",
    "srsly>=2.5.1",
    "starlette>=0.47.3",
    "sympy>=1.14.0",
    "thinc==8.2.3",
    "threadpoolctl>=3.6.0",
    "tldextract>=5.3.0",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
    "typer>=0.17.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.1",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "wasabi>=1.1.3",
    "weasel>=0.4.1",
    "wrapt>=1.17.3",
]
